--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   "author": "yqrashawn <namy.19@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "conflux-docusaurus-config": "^0.0.21"
+    "@cfxjs/docusaurus-config": "^0.1.0"
   }
 }
